--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
     </main>
     <footer>
         <a href="#" class="miigaik">МИИГАиК</a>
-        <a href="#" class="link conf">Политика Конфиденциальности</a>
-        <a href="#" class="link tech-sup">Контакты Тех.поддержка</a>
+        <a href="#" class="conf">Политика Конфиденциальности</a>
+        <a href="#" class="tech-sup">Контакты Тех.поддержка</a>
     </footer>
     <script src="hamburger.js"></script>
 </body>
